@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3269 utf-8
+personal_ws-1.1 en 3270 utf-8
 AAC
 AAS
 ABI
@@ -553,6 +553,7 @@ KOLFF
 KRT
 KRTL
 KRTS
+KSTAR
 KTTS
 Kain
 Kaminski
